<resources>
    <string name="app_name">My Note</string>
    <string name="trash">Trash</string>
    <string name="title">Siz %s titleni o\'shirishni xohlaysizmi?</string>
    <string name="reminder">Reminder</string>
    <string name="title_edit">Title</string>
    <string name="content">Content</string>
    <string name="delete_note">Delete Note</string>
    <string name="recover_note">Recover Note</string>
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>
    <string name="add">Add</string>
    <string name="light_mode">Light Mode</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="note_title">Note Title</string>
    <string name="note_content">Note Content</string>
    <string name="note_date">Note Date</string>
    <string name="pin">Pin</string>
    <string name="delete">Delete</string>
    <string name="you_want_to_delete_all_notes">You want to delete all notes?</string>
    <string name="no">No</string>
    <string name="men_haqqimda">Bul programma Mamanov Dinmuhammed ta\'repinen
        Gita dasturlash akademiyasinda o\'qip jurgen waqtinda duzildi.Qa\'te kemshilikler bolsa
        <a href="https://t.me/dimamamann"> @dimamaman </a> menen baylanisin\'
    </string>
    <string name="info">Info</string>
    <string name="ok">Ok</string>
</resources>