<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:background="@color/noteItemBackground"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textNoteTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/note_title"
            android:fontFamily="@font/poppins"
            android:textSize="18sp"
            android:textColor="@color/noteItemTextColor"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/image_pin"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_pin"
            android:visibility="gone"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/pin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/textNoteTitle"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="@id/textNoteTitle"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textNoteContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/note_content"
            android:textSize="18sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/noteItemTextColor"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textNoteTitle"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textNoteDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/note_date"
            android:textColor="@color/noteItemTextColor"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/poppins"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textNoteContent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>