<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:cardCornerRadius="35dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#EFD8D8"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/question_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:textSize="17sp"
                    android:text="@string/title"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="#DCD9D9"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/black"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    app:cornerRadius="13dp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/okay_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/okay"
                    android:textAllCaps="false"
                    android:backgroundTint="#2D7CB1"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white"
                    app:cornerRadius="13dp" />

            </LinearLayout>

        </LinearLayout>



    </androidx.cardview.widget.CardView>
</RelativeLayout>