<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/window_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etTitle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/title_edit"
        android:textColorHint="@color/primary_500"
        app:boxBackgroundColor="@color/noteItemBackground"
        app:boxCornerRadiusBottomEnd="14dp"
        app:boxCornerRadiusBottomStart="14dp"
        app:boxCornerRadiusTopEnd="14dp"
        app:boxCornerRadiusTopStart="14dp"
        app:boxStrokeColor="@color/primary_500"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="@color/primary_500"
        app:layout_constraintBottom_toTopOf="@+id/etContent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text|textMultiLine"
            android:textColor="@color/gray_900" />

        <!--<org.wordpress.aztec.AztecText
            android:id="@+id/et_editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:hint="@string/title_edit"
            android:minLines="5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:padding="16dp"
            android:imeOptions="actionNext"
            android:inputType="text|textMultiLine"
            android:textColor="@color/gray_900"
            app:backgroundColor="@android:color/white"
            app:quoteBackground="@android:color/white"
            app:quoteColor="@color/colorSilver"
            app:quoteMargin="0dp"
            app:quotePadding="@dimen/default_margin"
            app:quoteWidth="@dimen/quote_width"/>-->


    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etContent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/content"
        app:boxBackgroundColor="@color/noteItemBackground"
        app:boxCornerRadiusBottomEnd="14dp"
        android:textColorHint="@color/primary_500"
        app:boxCornerRadiusBottomStart="14dp"
        app:boxCornerRadiusTopEnd="14dp"
        app:boxCornerRadiusTopStart="14dp"
        app:boxStrokeColor="@color/primary_500"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="1dp"
        app:hintTextColor="@color/primary_500"
        app:layout_constraintTop_toBottomOf="@+id/etTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text|textMultiLine"
            android:textColor="@color/gray_900" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/editNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:borderWidth="0dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/reminder"
        android:src="@drawable/baseline_check_24"
        app:tint="@color/white"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:visibility="gone"
        android:layout_gravity="bottom"
        app:backgroundTint="@color/colorAquaHaze"
        app:contentInsetEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:contentInsetStart="8dp"
        app:elevation="2dp"
        tools:ignore="BottomAppBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_bold"
                style="@style/ActionButton"
                app:layout_constraintEnd_toStartOf="@id/btn_italic"
                app:icon="@drawable/ic_format_bold_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_italic"
                style="@style/ActionButton"
                app:layout_constraintEnd_toStartOf="@id/btn_quote"
                app:icon="@drawable/ic_format_italic_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_bold"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_quote"
                style="@style/ActionButton"
                app:layout_constraintEnd_toStartOf="@id/btn_ordered_list"
                app:icon="@drawable/ic_format_quote_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_italic"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_ordered_list"
                style="@style/ActionButton"
                app:layout_constraintEnd_toStartOf="@id/btn_unordered_list"
                app:icon="@drawable/ic_format_list_numbered_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_quote"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_unordered_list"
                style="@style/ActionButton"
                app:layout_constraintEnd_toStartOf="@id/btn_underline_list"
                app:icon="@drawable/ic_format_list_bulleted_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_ordered_list"
                app:layout_constraintTop_toTopOf="parent" />



            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_underline_list"
                style="@style/ActionButton"
                app:icon="@drawable/ic_underline"
                app:layout_constraintEnd_toStartOf="@id/btn_left_list"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_unordered_list"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_left_list"
                style="@style/ActionButton"
                app:icon="@drawable/leftalign"
                app:layout_constraintEnd_toStartOf="@id/btn_center_list"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_underline_list"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_center_list"
                style="@style/ActionButton"
                app:icon="@drawable/center_align"
                app:layout_constraintEnd_toStartOf="@id/btn_right_list"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_left_list"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_right_list"
                style="@style/ActionButton"
                app:icon="@drawable/right_align"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_center_list"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.constraintlayout.widget.ConstraintLayout>